# john-bampton.github.io

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  feed.xml  fetch.py  generate_featured.py  index.html  pyproject.toml  robots.txt  service-worker.js  styles.css  users.json
.github/: dependabot.yml  labeler.yml
.github/linters/: .jscpd.json  .markdown-lint.yml  .yaml-lint.yml
.github/workflows/: codeql-analysis.yml  fetch-daily.yml  pre-commit.yml  render-on-push.yml  super-linter.yml
doc/source/: achievements-and-history.rst  conf.py  index.rst
doc/source/_static/css/: custom.css
doc/source/_static/js/: custom.js
doc/source/_templates/: layout.html
docs/: featured.json  script.js  service-worker.js  styles.css  users.json
docs/bootstrap/css/: bootstrap-reboot.css  bootstrap-reboot.min.css  bootstrap.css
layouts/: layout.html
